quinto commit do CSS

--- a/style.css
+++ b/style.css
@@ -108,3 +108,37 @@ main {
     color: var(--green-300);
 }
 
+.pessoas #erro {
+    display: none;
+}
+
+.resultados {
+    background-color: var(--green-800);
+    border-radius: 0.9375rem;
+    padding: 1.5rem;
+}
+
+.resultados div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.resultados p {
+    color: var(--green-400);
+    font-size: 0.8125rem;
+}
+
+.resultados p strong {
+    color: var(--green-400);
+    font-size: 1rem;
+}
+
+.resultados div > strong {
+    color: var(--light-green);
+    font-size: 2rem;
+}
+
+.resultados .gorjeta-total {
+    margin-bottom: 1.25rem;
+}
