--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     --green-800: #00474B;
     --light-green: #26c2ae;
     --white: #ffffff;
+    --green-hover: #9fe8df;
+    --danger: #e17467;
 }
 
 body {
@@ -47,7 +49,7 @@ main {
 }
 
 .conta div,
-.pessoas div {
+.pessoas .input-box {
     margin-top: 0.4rem;
     background-color: var(--green-100);
     padding: 0.4rem 1.2rem;
@@ -75,8 +77,13 @@ main {
 }
 
 .conta:has(input:focus) div,
-.pessoas:has(input:focus) div {
+.conta:has(input:hover) div,
+.pessoas:has(input:focus) .input-box,
+.pessoas:has(input:hover) .input-box,
+.gorjeta #outra:focus,
+.gorjeta #outra:focus {
     outline: 2px solid var(--light-green);
+    cursor: pointer;
 }
 
 .gorjeta div {
@@ -99,6 +106,12 @@ main {
     color: var(--white);
 }
 
+.gorjeta input[type="button"]:hover,
+.resultados button:hover {
+    background-color: var(--green-hover);
+    cursor: pointer;
+}
+
 .gorjeta #outra {
     width: 100% ;
     background-color: var(--green-100);
@@ -109,8 +122,20 @@ main {
     color: var(--green-300);
 }
 
+.pessoas .input-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pessoas .erro {
+    outline: 2px solid var(--danger);
+}
+
 .pessoas #erro {
-    display: none;
+    font-size: 0.75rem;
+    color: var(--danger);
+    font-weight: 700;
 }
 
 .resultados {
@@ -119,7 +144,7 @@ main {
     padding: 1.5rem;
 }
 
-.resultados div {
+.resultados div div {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -174,6 +199,12 @@ main {
     padding-block: 0.5rem;
 }
 
+    .conta input::-webkit-inner-spin-button,
+    .pessoas input::-webkit-inner-spin-button,
+    .gorjeta #outra::-webkit-inner-spin-button {
+        display: none;
+}
+
 @media(min-width: 920px) {
     body {
         display: flex;
@@ -202,4 +233,17 @@ main {
     .gorjeta div {
         grid-template-columns: 1fr 1fr 1fr;
     }
+
+    .resultados {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        padding: 2.5rem;
+    }
+
+    .resultados div > strong {
+        font-size: 3rem;
+    }
 }
+
