--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@ main {
     color: var(--white);
 }
 
+.gorjeta .botao-ativo {
+    background-color: var(--light-green);
+    color: var(--green-800);
+}
+
 .gorjeta input[type="button"]:hover,
 .resultados button:hover {
     background-color: var(--green-hover);
@@ -128,7 +133,7 @@ main {
     justify-content: space-between;
 }
 
-.pessoas .erro {
+.pessoas #erro-div {
     outline: 2px solid var(--danger);
 }
 
@@ -136,6 +141,7 @@ main {
     font-size: 0.75rem;
     color: var(--danger);
     font-weight: 700;
+    display: none;
 }
 
 .resultados {
